--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "three": "^0.126.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "build:storybook": "build-storybook -o build-storybook",
     "postbuild": "react-snap",
